2015-06-29 Giuseppe Salamanna <salaman AT cern.ch>
	* Tagging the trunk that worked with 20.3.13 as ttHMultiAna-00-00-01 and make a branch of it
	
2015-06-26 David Hohn <david.hohn@cern.ch>
	* Remove TauTruthMatchingTool, matching is now done in derivation
	* Update tau truth variables to read decorations

2015-06-19 Rustem Ospanov <rustem at cern.ch>
	* Add TruthSelector tool
	* Select W, Z, H, tau, top and direct children
	* Select stable leptons with pt>5 GeV and their direct parents
	
2015-06-18 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: some fixes for things that weren't called as in Run 1 ntuple and some duplicate trigger items; 
	jet_truth_label now works: it has been switched on
	
2015-06-17 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: d0 not corrected for PV, as per ID Tracking recommendations; 
	z0 corrected for PV, now accessed by checking xAOD::VxType. Added var for N(PU vertices)
	
	
2015-06-16 Peter Onyisi <ponyisi AT cern.ch>
	* add ScalarWrapper to allow clean adding of non-vector variables
	* reorganize trigger code for easy extensibility

2015-06-16 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: prelim implementation of d0 and z0 correction for PV position.
	Note that the corrected d0 is unsigned, needs a final touch!
	
2015-06-16 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseObjectLoader.cxx: removed cut on crack regions for electrons

2015-06-16 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: d0 and sigd0 renamed _uncorr
	
2015-06-16 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: lepton ID branches now follow sign convention of Run 1 and PDG; 
	z0sinTheta --> z0sinTheta_uncorr as it signals it's not corrected for PV position
	
2015-06-16 David Hohn <david.hohn@cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: change m_tau_nTracks to numTrack
